<resources>
    <string name="simulator_name_lmu_windows">Le Mans Ultimate（Windows版）</string>
    <string name="simulator_name_gt7_ps5">Gran Turismo 7（PS5）</string>
    <string name="simulator_name_ace_windows">Assetto Corsa EVO（Windows版）</string>
    <string name="readout_item_vehicle_approach">車両接近</string>
    <string name="readout_item_vehicle_approach_sustained">接近継続</string>
    <string name="readout_item_vehicle_approach_start_readout">接近開始時の読み上げ</string>
    <string name="readout_item_flag">フラッグ</string>
    <string name="readout_item_blue_flag">ブルーフラッグ</string>
    <string name="readout_item_sector_yellow_flag">イエローフラッグ</string>
...
