<resources>
    <string name="server_ip_title">Windows版KoDriverへ接続するIPアドレス</string>
    <string name="server_ip_label">IPアドレス</string>
    <string name="server_ip_placeholder">例: 192.168.1.100</string>
    <string name="server_ip_save">保存</string>
    <string name="server_ip_invalid">無効なIPアドレスです</string>
    <string name="server_ip_description">Windows版KoDriverが動作しているPCのIPアドレスを入力してください。</string>
    <string name="server_ip_guide_description">Windows版KoDriverのインストール方法や接続手順は、インストールガイドを参照してください。</string>
    <string name="server_ip_guide_link">インストールガイドを開く</string>
    <string name="server_ip_connectivity_warning">Windows版KoDriverに接続できませんでした。IPアドレスとファイアウォールの設定を確認してください。</string>
    <string name="server_ip_save_anyway">このまま保存</string>
    <string name="server_ip_discovery_show_button">見つかったWindows版KoDriverを選択</string>
    <string name="server_ip_discovering">Windows版KoDriverを検出中…</string>
    <string name="server_ip_discovery_dialog_title">Windows版KoDriverを選択</string>
    <string name="server_ip_discovery_dialog_confirm">OK</string>
    <string name="server_ip_discovery_dialog_cancel">キャンセル</string>
    <string name="navigate_back">戻る</string>
</resources>
