appId: kurou.kodriver
---
- launchApp
- extendedWaitUntil:
    visible: "ルール"
    timeout: 30000
- tapOn: "LMU"
- tapOn: "Gran Turismo 7（PS5）"
- tapOn: "GT7"
- scroll
- tapOn: "Assetto Corsa EVO（Windows版）"
- tapOn: "ログ"
- assertVisible: "ログはまだありません"
- tapOn: "その他"
- assertVisible: "Windows版KoDriverへ接続するIPアドレス"
- tapOn: "ルール"
- assertNotVisible: "Windows版KoDriverへ接続するIPアドレス"
