appId: kurou.kodriver
---
- launchApp
- extendedWaitUntil:
    visible: "ルール"
    timeout: 30000
- tapOn: "車両接近"
- assertVisible: "閾値設定"
